--- a/slopetable.tex
+++ b/slopetable.tex
@@ -21,8 +21,8 @@ Photoevaporation & $-0.15$ & $0.11$ & 3 \\
 mass loss &&& \\
 Impact erosion & $-0.33$ & $0.25$ & 5
 \enddata
-\tablecomments{$r_p$ in units of R$_{\oplus}$, $P$ in units of days, and $F$ in units of $F_{\oplus}$.
-References: 1) this work 2) \citealt{martinez19} 3) \citealt{lopez18} 4) \citealt{gupta19b}
+\tablecomments{$r_p$ in units of R$_{\oplus}$, $P$ in units of days, and $F$ in units of $F_{\oplus}$. \\
+\textbf{References:} 1) this work 2) \citealt{martinez19} 3) \citealt{lopez18} 4) \citealt{gupta19b}
 5) \citealt{wyatt19}.}
 \end{deluxetable}
 \capstarttrue
